added course content

--- a/2 - data types and conditionals/index.html
+++ b/2 - data types and conditionals/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js" async></script>
-    <script src="styles.css"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!--Data Types: Learning-->
@@ -13,6 +13,7 @@
     <div id="greeting"></div>
 
     <!--Conditionals: Learning-->
+    <!--See https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals for example-->
     <label for="technology">Select the technology you're interested in learning.</label>
     <select id="technology">
         <option value="">--Make a choice--</option>
@@ -23,7 +24,9 @@
         <option value="pcb">PCB Design</option>
     </select>
 
-    <h2>Info:</h2>
-    <p></p>
+    <div class="info-container">
+        <h2></h2>
+        <p></p>
+    </div>
 </body>
 </html>
