--- a/3 - function basics/2 - javascript - call stack/index.html
+++ b/3 - function basics/2 - javascript - call stack/index.html
@@ -31,6 +31,10 @@
     <h2>Visualizing the JavaScript Function Call Stack</h2>
     <div class="bottom-row">
         <div class="prompt-container">
+            <p class="prompt-description">
+                See how the call stack responds 
+                when you try to calculate the 
+                average of two numbers.</p>
             <p class="promt-text">Enter two numbers:</p>
             <input class="numberInputA" type="text">
             <input class="numberInputB" type="text">
